--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ lazy_static = "1.4.0"
 log = "0.4.17"
 serde = "1.0.155"
 simplelog = "0.12.1"
-vulkano = "0.32.3"
+vulkano = "0.33.0"
+vulkano-win = "0.33.0"
 winit = "0.28.2"
