--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -18,11 +18,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Lint Code
-        uses: github/super-linter@v5
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: main
+      - name: lint
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
   test:
     strategy:
